# steamsync

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.py
.github/workflows/: test_build.yaml
src/: steamsync.py
steamsync/: README.md  TODO.md  logo.pdn  pyproject.toml
steamsync-gui/: README.md  build.py  main.py  pyproject.toml  requirements.txt
steamsync-gui/steamsync_gui/: main.py
steamsync-library/: README.md  requirements.txt  setup.cfg  setup.py
steamsync-library/src/: defs.py  itch.py  legendary.py  list_xbox_games.ps1  steameditor.py  steamsync.py  util.py  xbox.py
steamsync/steamsync/: defs.py  pyinstaller.py  steameditor.py  steamsync.py
steamsync/steamsync/launchers/: egs.py  itch.py  launcher.py  legendary.py  xbox.py
steamsync/steamsync/launchers/static/: list_xbox_games.ps1
