[tool.poetry]
name = "steamsync-gui"
version = "0.1.0"
description = ""
authors = ["Jayden Milne <jaydenmilne@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "steamsync_gui"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
